--- a/src/main/webapp/resources/css/common/commonAdminLayout.css
+++ b/src/main/webapp/resources/css/common/commonAdminLayout.css
@@ -103,7 +103,7 @@ body {
 }
 
 .common-main {
-  background-color: red;
+  /* background-color: red; */
   height: 100vh;
   margin-top: 70px; /* header height */
   margin-left: 100px; /* sidebar width */
@@ -113,7 +113,7 @@ body {
 }
 
 .main {
-  background-color: blue;
+  /* background-color: blue; */
   width: 97%;
   height: 100%;
 }
