--- a/src/main/webapp/resources/css/productList.css
+++ b/src/main/webapp/resources/css/productList.css
@@ -12,11 +12,6 @@
   margin-bottom: 80px;
 }
 
-.search-products {
-  background-color: yellow;
-  height: 100%;
-}
-
 .best-products__title {
   display: flex;
   justify-content: center;
@@ -39,6 +34,12 @@
   margin-top: 8px;
   font-weight: bold;
   letter-spacing: -5px;
+}
+
+.best-products__title-wrap h2 {
+  margin-top: 8px;
+  font-weight: 600;
+  letter-spacing: -2px;
 }
 
 .best-products__5 {
@@ -113,4 +114,90 @@
 .rental-price {
   color: #0155ff;
   font-weight: 600;
+}
+
+.line {
+  height: 0.7px;
+  background-color: darkgray;
+}
+
+.total-products__title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 15%;
+  width: 100%;
+}
+
+.total-products {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  height: 100%;
+}
+
+.product-item {
+  width: 22%;
+  height: 500px;
+  margin-bottom: 100px;
+}
+
+.product-item:hover {
+  background-color: rgba(228, 228, 228, 0.5);
+}
+
+.product-item__image {
+  background-image: url('/images/1.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  height: 65%;
+}
+
+.product-item__content {
+  height: 35%;
+}
+
+.product-item-title {
+  height: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.product-item-title__code {
+  color: darkgray;
+  font-weight: 600;
+}
+
+.product-item-title__name {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.product-item-prices {
+  height: 60%;
+}
+
+.btn-anchor {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  border: 1px solid rgb(185, 185, 185);
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  right: 15px;
+  bottom: 20px;
+}
+
+.btn-anchor span {
+  font-size: 30px;
+}
+
+.btn-anchor:hover {
+  background-color: rgba(228, 228, 228, 0.5);
 }
