--- a/src/main/webapp/resources/css/additionalInfo.css
+++ b/src/main/webapp/resources/css/additionalInfo.css
@@ -1,4 +1,4 @@
-.main .buy-wrap {
+.buy-wrap {
     display: flex;
     width: 100%;
     height: 100%;
@@ -141,7 +141,7 @@
     gap: 10px;
 }
 
-button {
+.c-button {
     padding: 10px 20px;
     font-size: 16px;
     font-weight: bold;
