--- a/src/main/webapp/resources/css/common/commonLayout.css
+++ b/src/main/webapp/resources/css/common/commonLayout.css
@@ -2,84 +2,89 @@
 
 html,
 body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 /* header */
 
 .common-header {
-  width: 100%;
-  height: 90px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
-  position: fixed;
-  top: 0;
-  z-index: 10;
-  display: flex;
-  align-items: center;
-  background-color: white;
+    width: 100%;
+    height: 90px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    background-color: white;
 }
 
 .header-left {
-  width: 350px;
-  height: 100%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
+    width: 350px;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .header-left__2 {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 600;
-  font-size: 15px;
-  color: rgb(116, 116, 116);
-  cursor: pointer;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    font-size: 15px;
+    color: rgb(116, 116, 116);
+    cursor: pointer;
 }
 
 .logo {
-  width: 110px;
+    width: 110px;
 }
 
 .header-right {
-  width: 250px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-weight: 600;
-  font-size: 15px;
-  color: rgb(116, 116, 116);
-  cursor: pointer;
+    width: 160px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 600;
+    font-size: 15px;
+    color: rgb(116, 116, 116);
+    cursor: pointer;
 }
 
 .ctm-wrap {
-  width: 1350px;
-  height: 100%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    width: 1350px;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 /* main */
 
 .common-main {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .main {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
-.logout-btn{
-	background: none;
-	border: none;
-	cursor: pointer;
+
+.logout-btn {
+    background: none;
+    border: none;
+}
+
+.mypage-btn {
+    background: none;
+    border: none;
 }
