--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -15,7 +15,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(95, 95, 95, 0.5);
+    background-color: rgba(95, 95, 95, 0.4);
     z-index: 1;
     padding-top: 80px;
 }
@@ -26,7 +26,8 @@
     left: 10%;
     width: 40%;
     height: 40%;
-    color: #004b7a;
+    color: #3045ff;
+    /*color: #3d4caf;*/
     font-style: italic;
 }
 
@@ -47,14 +48,16 @@
 
 .main-banner__btn {
     position: absolute;
-    bottom: 70px;
+    bottom: 80px;
     width: 220px;
     padding: 12px 20px;
-    font-weight: 500;
-    background-color: #0155ff;
+    font-weight: 600;
+    background-color:white;
+    color:#0155ff;
     border-radius: 15px;
     left: 50%;
     transform: translateX(-50%);
+    transition: all 0.6s;
 }
 
 /* 애니메이션 정의 */
