--- a/src/main/webapp/resources/css/memberMypage.css
+++ b/src/main/webapp/resources/css/memberMypage.css
@@ -1,114 +1,147 @@
 @charset "UTF-8";
 html,
-        body {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        .container {
-            height: 100%;
-            width: 100%;
-        }
-        .container-header {
-            height: 9.5%;
-        }
-        .main-mypage-header {
-            height: 10%;
-            display: flex;
-            justify-content: space-between;
-            margin-top: 30px;
-        }
-        .mypage-logo-wrap {
-            display: flex;
-        }
-        .mypage-user-name {
-            width: 80%;
-            height: 8%;
-        }
-        .mypage-user-name span {
-            font-weight: bold;
-            font-size: x-large;
-        }
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-        .mypage-pay-wrap {
-            height: 100%;
-            width: 100%;
-            display: flex;
-        }
+.container {
+    height: 100%;
+    width: 100%;
+}
 
-        .payment-details h3 {
-            font-weight: bold;
-        }
-        .order-details {
-            height: 100%;
-        }
-        .order-details h3 {
-            font-weight: bold;
-        }
+.container-header {
+    height: 9.5%;
+}
 
-        .payment-details-container-haed p {
-            color: #a7a5a5;
-        }
+.main-mypage-header {
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
 
-        .payment-contents h5 {
-            font-weight: bold;
-            margin-top: 30px;
-            margin-left: 20px;
-        }
+.mypage-logo-wrap {
+    display: flex;
+}
+
+.mypage-user-name {
+    width: 80%;
+    height: 8%;
+}
+
+.mypage-user-name span {
+    font-weight: bold;
+    font-size: x-large;
+}
+
+.mypage-pay-wrap {
+    height: 100%;
+    width: 100%;
+    display: flex;
+}
+
+.payment-details h3 {
+    font-weight: bold;
+}
+
+.order-details {
+    width: 100%;
+    height: 100%;
+}
+
+.line {
+    background-color: black;
+    width: 30%;
+    height: 1px;
+    margin-top: 10px;
+}
+
+#cancel-btn {
+    margin-top: 40px;
+    width: 200px;
+}
+
+.order-details h3 {
+    font-weight: bold;
+    margin-top: 50px;
+    margin-bottom: 25px;
+}
+
+.nickname {
+    color: #4c88fd;
+    font-weight: 600;
+}
+
+.status {
+    color: #4c88fd;
+    font-weight: 600;
+}
+
+.payment-details-container-haed p {
+    color: #a7a5a5;
+}
+
+.payment-contents h5 {
+    font-weight: bold;
+    margin-top: 30px;
+    margin-left: 20px;
+}
 
 
+.my-application-service h3 {
+    font-weight: bold;
+}
 
-        .my-application-service h3 {
-            font-weight: bold;
-        }
+li {
+    color: #a7a5a5;
+}
 
-        li {
-            color: #a7a5a5;
-        }
+.app-container-header p {
+    text-align: center;
+    color: #a7a5a5;
+    font-size: large;
+}
 
-        .app-container-header p {
-            text-align: center;
-            color: #a7a5a5;
-            font-size: large;
-        }
+.my-application-service-list {
+}
 
-        .my-application-service-list {
-        }
+.product-order-wrap h5 {
+    margin-left: 30px;
+    margin-top: 40px;
+    font-weight: bold;
+}
 
-        .product-order-wrap h5 {
-            margin-left: 30px;
-            margin-top: 40px;
-            font-weight: bold;
-        }
-        .product-wrap h5 {
-            margin-left: 30px;
-            margin-top: 40px;
-            font-weight: bold;
-        }
+.product-wrap h5 {
+    margin-left: 30px;
+    margin-top: 40px;
+    font-weight: bold;
+}
 
-        .product-amount-month-wrap p {
-            margin-left: 20px;
-            color: #91a0a6;
-            margin-right: 20px;
-        }
+.product-amount-month-wrap p {
+    margin-left: 20px;
+    color: #91a0a6;
+    margin-right: 20px;
+}
 
-        table {
-            margin-left: auto;
-            margin-right: auto;
-            width: 100%;
-            border-collapse: collapse;
-        }
+table {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    border-collapse: collapse;
+}
 
-        th,
-        td {
-            border: 1px solid #dddddd;
-            padding: 8px;
-        }
+th,
+td {
+    border: 1px solid #dddddd;
+    padding: 8px;
+}
 
-        th {
-            background-color: #f2f2f2;
-        }
+th {
+    background-color: #f2f2f2;
+}
 
-        .product-imags {
-            width: 50px;
-        }
+.product-imags {
+    width: 50px;
+}
