--- a/src/main/webapp/resources/css/orderpopup.css
+++ b/src/main/webapp/resources/css/orderpopup.css
@@ -1,6 +1,6 @@
-/* 스크롤 */
+/* 스크롤 용 */
 .scrollable-list {
-  height: 200px;
+  height: 650px;
   overflow-y: scroll;
   border: 1px solid #ccc;
   padding: 10px;
@@ -14,7 +14,7 @@
   padding: 5px 0;
 }
 
-/* 검색 */
+/* 검색 용 */
 .search-container {
   width: 80%;
   margin: 0 auto;
@@ -32,7 +32,6 @@
 
 .popup {
   display: none;
-  background-color: aqua;
   border: 2px solid black;
   position: absolute;
 }
