--- a/src/main/webapp/resources/css/orderpopup.css
+++ b/src/main/webapp/resources/css/orderpopup.css
@@ -1,6 +1,6 @@
-/* 스크롤 */
+/* 스크롤 용 */
 .scrollable-list {
-  height: 200px;
+  height: 650px;
   overflow-y: scroll;
   border: 1px solid #ccc;
   padding: 10px;
@@ -14,15 +14,14 @@
   padding: 5px 0;
 }
 
-/* 검색 */
+/* 검색 용 */
 .search-container {
-  width: 80%;
-  margin: 0 auto;
-  background-color: #f0f0f0;
-  border: 1px solid #ccc;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: flex-end;
+}
+
+.me {
+  margin-right: 100px;
 }
 
 .search-row {
@@ -32,7 +31,20 @@
 
 .popup {
   display: none;
-  background-color: aqua;
-  border: 2px solid black;
   position: absolute;
+}
+.popup h2 {
+  font-size: 22px;
+  font-weight: 700;
+  color: #2e55f1;
+  margin-bottom: 20px;
+}
+.lili {
+  margin-bottom: 10px;
+  border-radius: 15px;
+  border: 1px solid #2e55f1;
+  height: 50px;
+  line-height: 38px;
+  color: #2e55f1;
+  font-weight: 700;
 }
